[tool.poetry]
name = "lineage"
version = "0.1.0"
description = "Create and update file lineage"
authors = ["Indoc Research"]

[tool.poetry.dependencies]
aniso8601 = "8.0.0"
astroid = "2.4.2"
attrs = "20.2.0"
certifi = "2020.4.5.2"
cffi = "1.14.0"
chardet = "3.0.4"
click = "7.1.2"
cryptography = "41.0.3"
docopt = "0.6.2"
ecdsa = "0.14.1"
Flask = "1.1.2"
Flask-Cors = "3.0.8"
Flask-Executor = "0.9.3"
Flask-JWT = "0.3.2"
Flask-RESTful = "0.3.8"
flask-restx = "0.2.0"
Flask-SQLAlchemy = "2.4.3"
gunicorn = "20.0.4"
hdfs = "2.5.8"
idna = "2.9"
isort = "5.6.4"
itsdangerous = "1.1.0"
Jinja2 = "2.11.2"
jsonschema = "3.2.0"
lazy-object-proxy = "1.4.3"
MarkupSafe = "1.1.1"
mccabe = "0.6.1"
pilot-platform-common = "0.0.25"
psycopg2-binary = "2.8.6"
pyasn1 = "0.4.8"
pycparser = "2.20"
PyJWT = "1.4.2"
pykerberos = "1.2.4"
pylint = "2.6.0"
pyrsistent = "0.17.3"
python = "^3.7"
python-jose = "3.2.0"
python-json-logger = "0.1.11"
python-keycloak = "0.21.0"
pytz = "2020.1"
python-dotenv = "0.19.1"
pydantic = "1.8.2"
requests = "2.24.0"
requests-kerberos = "0.12.0"
rsa = "4.6"
six = "1.15.0"
SQLAlchemy = "1.3.17"
toml = "0.10.1"
urllib3 = "1.25.9"
Werkzeug = "1.0.1"
wrapt = "1.12.1"
opentelemetry-exporter-jaeger = "1.6.2"
opentelemetry-instrumentation = "0.26b1"
opentelemetry-instrumentation-flask = "0.26b1"
opentelemetry-instrumentation-requests = "0.26b1"
opentelemetry-instrumentation-logging = "0.26b1"

[tool.poetry.dev-dependencies]
pytest = "6.1.1"
pytest-env = "0.6.2"
coverage = "5.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"